updated var test

--- a/notebooks/xgb_ensemble.ipynb
+++ b/notebooks/xgb_ensemble.ipynb
@@ -2,32 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "'../features/vgg16_1_feat.pkl'\n",
-      "'../features/cnn_1_feat.pkl'\n",
-      "'../features/resnet_aug1_feat.pkl'\n",
-      "'../features/incept_aug1_feat.pkl'\n",
-      "'../features/other_feat.pkl'\n",
-      "'../features/incept_aug2_feat.pkl'\n",
-      "'../features/cnn_1_aug1_feat.pkl'\n",
-      "'../features/resnet_1_feat.pkl'\n",
-      "'../features/cnn_3_aug1_feat.pkl'\n",
-      "'../features/cnn_2_aug1_feat.pkl'\n",
-      "'../features/cnn_2_feat.pkl'\n",
-      "'../features/cnn_4_aug1_feat.pkl'\n",
-      "'../features/cnn_4_aug1_feat_add_early.pkl'\n",
-      "'../features/cnn_5_aug1_feat.pkl'\n",
-      "'../features/incept_1_feat.pkl'\n",
-      "'../features/resnet_aug3_feat.pkl'\n",
-      "'../features/incept_aug3_feat.pkl'\n",
-      "'../features/vgg_aug1_feat.pkl'\n",
-      "'../features/resnet_aug2_feat.pkl'\n"
+      "'../features/vgg16_1_feat.pkl',\n",
+      "'../features/cnn_1_feat.pkl',\n",
+      "'../features/resnet_aug1_feat.pkl',\n",
+      "'../features/incept_aug1_feat.pkl',\n",
+      "'../features/other_feat.pkl',\n",
+      "'../features/incept_aug2_feat.pkl',\n",
+      "'../features/cnn_1_aug1_feat.pkl',\n",
+      "'../features/resnet_1_feat.pkl',\n",
+      "'../features/cnn_3_aug1_feat.pkl',\n",
+      "'../features/cnn_2_aug1_feat.pkl',\n",
+      "'../features/cnn_2_feat.pkl',\n",
+      "'../features/cnn_4_aug1_feat.pkl',\n",
+      "'../features/cnn_4_aug1_feat_add_early.pkl',\n",
+      "'../features/cnn_5_aug1_feat.pkl',\n",
+      "'../features/incept_1_feat.pkl',\n",
+      "'../features/resnet_aug3_feat.pkl',\n",
+      "'../features/incept_aug3_feat.pkl',\n",
+      "'../features/vgg_aug1_feat.pkl',\n",
+      "'../features/resnet_aug2_feat.pkl',\n"
      ]
     }
    ],
@@ -40,45 +40,53 @@
     "\n",
     "fl = glob.glob('../features/*.pkl')\n",
     "for l in fl:\n",
-    "    print(\"'{}'\".format(l))"
+    "    print(\"'{}',\".format(l))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "../features/vgg16_1_feat.pkl\n",
+      "../features/incept_aug1_feat.pkl\n",
       "../features/other_feat.pkl\n",
       "../features/cnn_1_aug1_feat.pkl\n",
+      "../features/resnet_1_feat.pkl\n",
       "../features/cnn_2_aug1_feat.pkl\n",
-      "../features/cnn_3_aug1_feat.pkl\n",
       "../features/cnn_4_aug1_feat.pkl\n",
-      "../features/cnn_4_aug1_feat_add_early.pkl\n",
-      "../features/cnn_5_aug1_feat.pkl\n",
-      "../features/vgg_aug1_feat.pkl\n",
-      "../features/incept_aug2_feat.pkl\n",
       "../features/resnet_aug3_feat.pkl\n",
-      "(1604, 20) (8424, 20) (1604,)\n"
+      "../features/resnet_aug2_feat.pkl\n",
+      "(1604, 19) (8424, 19) (1604,)\n"
      ]
     }
    ],
    "source": [
     "choose_fl = [\n",
+    "#'../features/cnn_1_feat.pkl',\n",
+    "#'../features/resnet_aug1_feat.pkl',\n",
+    "#'../features/incept_aug2_feat.pkl',\n",
+    "#'../features/cnn_3_aug1_feat.pkl',\n",
+    "#'../features/cnn_2_feat.pkl',\n",
+    "#'../features/cnn_4_aug1_feat_add_early.pkl',\n",
+    "#'../features/cnn_5_aug1_feat.pkl',\n",
+    "#'../features/incept_1_feat.pkl',\n",
+    "#'../features/incept_aug3_feat.pkl',\n",
+    "#'../features/vgg_aug1_feat.pkl',\n",
+    "'../features/vgg16_1_feat.pkl',\n",
+    "'../features/incept_aug1_feat.pkl',\n",
     "'../features/other_feat.pkl',\n",
     "'../features/cnn_1_aug1_feat.pkl',\n",
+    "'../features/resnet_1_feat.pkl',\n",
     "'../features/cnn_2_aug1_feat.pkl',\n",
-    "'../features/cnn_3_aug1_feat.pkl',\n",
     "'../features/cnn_4_aug1_feat.pkl',\n",
-    "'../features/cnn_4_aug1_feat_add_early.pkl',\n",
-    "'../features/cnn_5_aug1_feat.pkl',\n",
-    "'../features/vgg_aug1_feat.pkl',\n",
-    "'../features/incept_aug2_feat.pkl',\n",
     "'../features/resnet_aug3_feat.pkl',\n",
-    "    \n",
+    "'../features/resnet_aug2_feat.pkl',\n",
+    "  \n",
     "]\n",
     "\n",
     "def load_x_y():\n",
@@ -101,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -189,67 +197,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0]\ttrain-logloss:0.639763\tvalid-logloss:0.643381\n",
+      "[0]\ttrain-logloss:0.639003\tvalid-logloss:0.643103\n",
       "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
       "\n",
       "Will train until valid-logloss hasn't improved in 30 rounds.\n",
-      "[100]\ttrain-logloss:0.094194\tvalid-logloss:0.17904\n",
+      "[100]\ttrain-logloss:0.085426\tvalid-logloss:0.16726\n",
       "Stopping. Best iteration:\n",
-      "[101]\ttrain-logloss:0.09382\tvalid-logloss:0.178767\n",
+      "[159]\ttrain-logloss:0.059304\tvalid-logloss:0.158494\n",
       "\n",
-      "[0]\ttrain-logloss:0.640312\tvalid-logloss:0.641876\n",
+      "[0]\ttrain-logloss:0.640624\tvalid-logloss:0.642576\n",
       "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
       "\n",
       "Will train until valid-logloss hasn't improved in 30 rounds.\n",
-      "[100]\ttrain-logloss:0.098177\tvalid-logloss:0.158231\n",
+      "[100]\ttrain-logloss:0.094006\tvalid-logloss:0.139332\n",
+      "[200]\ttrain-logloss:0.05262\tvalid-logloss:0.127287\n",
       "Stopping. Best iteration:\n",
-      "[126]\ttrain-logloss:0.084901\tvalid-logloss:0.157481\n",
+      "[217]\ttrain-logloss:0.047615\tvalid-logloss:0.124558\n",
       "\n",
-      "[0]\ttrain-logloss:0.640328\tvalid-logloss:0.642502\n",
+      "[0]\ttrain-logloss:0.64019\tvalid-logloss:0.64249\n",
       "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
       "\n",
       "Will train until valid-logloss hasn't improved in 30 rounds.\n",
-      "[100]\ttrain-logloss:0.096753\tvalid-logloss:0.183324\n",
+      "[100]\ttrain-logloss:0.0877\tvalid-logloss:0.181453\n",
       "Stopping. Best iteration:\n",
-      "[118]\ttrain-logloss:0.088123\tvalid-logloss:0.181768\n",
+      "[128]\ttrain-logloss:0.072304\tvalid-logloss:0.178184\n",
       "\n",
-      "[0]\ttrain-logloss:0.640615\tvalid-logloss:0.642987\n",
+      "[0]\ttrain-logloss:0.640457\tvalid-logloss:0.640957\n",
       "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
       "\n",
       "Will train until valid-logloss hasn't improved in 30 rounds.\n",
-      "[100]\ttrain-logloss:0.098378\tvalid-logloss:0.164931\n",
-      "[200]\ttrain-logloss:0.055533\tvalid-logloss:0.160889\n",
+      "[100]\ttrain-logloss:0.092235\tvalid-logloss:0.164564\n",
       "Stopping. Best iteration:\n",
-      "[184]\ttrain-logloss:0.060162\tvalid-logloss:0.159454\n",
+      "[117]\ttrain-logloss:0.082179\tvalid-logloss:0.163715\n",
       "\n",
-      "[0]\ttrain-logloss:0.641168\tvalid-logloss:0.640914\n",
+      "[0]\ttrain-logloss:0.641168\tvalid-logloss:0.64084\n",
       "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
       "\n",
       "Will train until valid-logloss hasn't improved in 30 rounds.\n",
-      "[100]\ttrain-logloss:0.098402\tvalid-logloss:0.165613\n",
+      "[100]\ttrain-logloss:0.090572\tvalid-logloss:0.149255\n",
       "Stopping. Best iteration:\n",
-      "[88]\ttrain-logloss:0.105447\tvalid-logloss:0.165157\n",
+      "[83]\ttrain-logloss:0.100543\tvalid-logloss:0.148211\n",
       "\n",
-      "local average valid loss 0.171129868763 val loss std 0.010627446409\n",
+      "local average valid loss 0.157240193323 val loss std 0.0190074442874\n",
       "         id  is_iceberg\n",
-      "0  5941774d    0.008957\n",
-      "1  4023181e    0.900247\n",
-      "2  b20200e4    0.035097\n",
-      "3  e7f018bb    0.997962\n",
-      "4  4371c8c3    0.038426\n",
+      "0  5941774d    0.021014\n",
+      "1  4023181e    0.796910\n",
+      "2  b20200e4    0.015838\n",
+      "3  e7f018bb    0.998485\n",
+      "4  4371c8c3    0.050210\n",
       "         id  is_iceberg\n",
-      "0  5941774d    0.008784\n",
-      "1  4023181e    0.900677\n",
-      "2  b20200e4    0.035903\n",
-      "3  e7f018bb    0.997969\n",
-      "4  4371c8c3    0.038634\n"
+      "0  5941774d    0.021353\n",
+      "1  4023181e    0.797099\n",
+      "2  b20200e4    0.016643\n",
+      "3  e7f018bb    0.998503\n",
+      "4  4371c8c3    0.052756\n"
      ]
     }
    ],
@@ -259,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 106,
    "metadata": {
     "scrolled": false
    },
@@ -268,62 +276,60 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0]\ttrain-logloss:0.640909\tvalid-logloss:0.640024\n",
+      "[0]\ttrain-logloss:0.64014\tvalid-logloss:0.640318\n",
       "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
       "\n",
       "Will train until valid-logloss hasn't improved in 30 rounds.\n",
-      "[100]\ttrain-logloss:0.099771\tvalid-logloss:0.152641\n",
+      "[100]\ttrain-logloss:0.088416\tvalid-logloss:0.149747\n",
       "Stopping. Best iteration:\n",
-      "[110]\ttrain-logloss:0.093476\tvalid-logloss:0.150591\n",
+      "[131]\ttrain-logloss:0.071451\tvalid-logloss:0.146607\n",
       "\n",
-      "[0]\ttrain-logloss:0.640652\tvalid-logloss:0.638698\n",
+      "[0]\ttrain-logloss:0.640654\tvalid-logloss:0.639231\n",
       "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
       "\n",
       "Will train until valid-logloss hasn't improved in 30 rounds.\n",
-      "[100]\ttrain-logloss:0.109804\tvalid-logloss:0.113212\n",
-      "[200]\ttrain-logloss:0.065203\tvalid-logloss:0.095043\n",
-      "[300]\ttrain-logloss:0.041004\tvalid-logloss:0.090215\n",
-      "[400]\ttrain-logloss:0.027138\tvalid-logloss:0.08842\n",
+      "[100]\ttrain-logloss:0.101951\tvalid-logloss:0.102936\n",
+      "[200]\ttrain-logloss:0.056535\tvalid-logloss:0.08979\n",
       "Stopping. Best iteration:\n",
-      "[466]\ttrain-logloss:0.021269\tvalid-logloss:0.085581\n",
+      "[223]\ttrain-logloss:0.050506\tvalid-logloss:0.087753\n",
       "\n",
-      "[0]\ttrain-logloss:0.639568\tvalid-logloss:0.642072\n",
+      "[0]\ttrain-logloss:0.639738\tvalid-logloss:0.642165\n",
       "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
       "\n",
       "Will train until valid-logloss hasn't improved in 30 rounds.\n",
-      "[100]\ttrain-logloss:0.095555\tvalid-logloss:0.1597\n",
+      "[100]\ttrain-logloss:0.090744\tvalid-logloss:0.149501\n",
       "Stopping. Best iteration:\n",
-      "[110]\ttrain-logloss:0.090093\tvalid-logloss:0.158126\n",
+      "[143]\ttrain-logloss:0.070482\tvalid-logloss:0.141893\n",
       "\n",
-      "[0]\ttrain-logloss:0.639859\tvalid-logloss:0.644863\n",
+      "[0]\ttrain-logloss:0.639705\tvalid-logloss:0.6448\n",
       "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
       "\n",
       "Will train until valid-logloss hasn't improved in 30 rounds.\n",
-      "[100]\ttrain-logloss:0.089237\tvalid-logloss:0.217207\n",
+      "[100]\ttrain-logloss:0.08022\tvalid-logloss:0.204312\n",
       "Stopping. Best iteration:\n",
-      "[79]\ttrain-logloss:0.101114\tvalid-logloss:0.214146\n",
+      "[116]\ttrain-logloss:0.071852\tvalid-logloss:0.202973\n",
       "\n",
-      "[0]\ttrain-logloss:0.640256\tvalid-logloss:0.642719\n",
+      "[0]\ttrain-logloss:0.640024\tvalid-logloss:0.641508\n",
       "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
       "\n",
       "Will train until valid-logloss hasn't improved in 30 rounds.\n",
-      "[100]\ttrain-logloss:0.092388\tvalid-logloss:0.197273\n",
+      "[100]\ttrain-logloss:0.087234\tvalid-logloss:0.184681\n",
       "Stopping. Best iteration:\n",
-      "[89]\ttrain-logloss:0.098268\tvalid-logloss:0.195221\n",
+      "[80]\ttrain-logloss:0.098531\tvalid-logloss:0.18189\n",
       "\n",
-      "local average valid loss 0.16346439733 val loss std 0.0455986236859\n",
+      "local average valid loss 0.155035006782 val loss std 0.0404901689146\n",
       "         id  is_iceberg\n",
-      "0  5941774d    0.008885\n",
-      "1  4023181e    0.873632\n",
-      "2  b20200e4    0.036059\n",
-      "3  e7f018bb    0.997308\n",
-      "4  4371c8c3    0.040388\n",
+      "0  5941774d    0.015397\n",
+      "1  4023181e    0.816671\n",
+      "2  b20200e4    0.013512\n",
+      "3  e7f018bb    0.998398\n",
+      "4  4371c8c3    0.073509\n",
       "         id  is_iceberg\n",
-      "0  5941774d    0.008842\n",
-      "1  4023181e    0.866575\n",
-      "2  b20200e4    0.040689\n",
-      "3  e7f018bb    0.997747\n",
-      "4  4371c8c3    0.034109\n"
+      "0  5941774d    0.014148\n",
+      "1  4023181e    0.817814\n",
+      "2  b20200e4    0.014077\n",
+      "3  e7f018bb    0.998590\n",
+      "4  4371c8c3    0.074269\n"
      ]
     }
    ],
